--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ __pycache__
 config.py
 Version3/GridSearch
 Version3/Calculated
+Version3/Component6FullData
+Version3/KmodeData
+Version3/MapperGraphs
