--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,9 @@ Version3/Component6Undersample
 Version3/KmodeData
 Version3/MapperGraphs
 Version3/Data
+Version3/BestK
+Version3/Component6Car
+Version3/Component6FullData
+Version3/Component8FullData
 Version3/Component11Pass
+Version3/Component15Car
