--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ Version3/Data
 Version3/BestK
 Version3/Component6Car
 Version3/Component6FullData
+Version3/Component7Car
+Version3/Component7CarOnly
 Version3/Component8FullData
+Version3/Component12Pass
+Version3/Component15Car
 Version3/Component11Pass
 Version3/Component15Car
