laptop to desktop

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,9 @@ Version3/Component12Pass
 Version3/Component15Car
 Version3/Component11Pass
 Version3/Component15Car
+Version3/ModelPerformance
 lib
 React
 .Rproj.user
 SpatialTemporal
+
