--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ Version3/Component15Car
 Version3/Component11Pass
 Version3/Component15Car
 Version3/ModelPerformance
+Version3/Map
 lib
 React
 .Rproj.user
