--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ Version3/Component11Pass
 Version3/Component15Car
 Version3/ModelPerformance
 Version3/Map
+Version3/Plots
 lib
 React
 .Rproj.user
