--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ React
 SpatialTemporal
 CalculatedData/*
 config.py
+"*.png"
 
 Version1/Data
 
@@ -36,4 +37,4 @@ Version4/Component9Motor
 Version4/Data
 
 ForMatrix/Output
-ForMatrix/CalculatedData"*.png" 
+ForMatrix/CalculatedData
