--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ Version4/Data
 ForMatrix/Output
 ForMatrix/CalculatedData
 ForMatrix/Plot
+
+Models/ModelPerformance
+Models/ModelPerformanceNofold
